fix 100% height on mobile

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -407,6 +407,8 @@ html {
 
 @media screen and (max-width: 800px) {
 .home {
+
+  height: 100%;
   .project-title {
     height: unset;
     min-height: 50px;
